--- a/api/Gemfile
+++ b/api/Gemfile
@@ -12,6 +12,7 @@ gem 'puma', '~> 3.7'
 
 gem 'dotenv-rails'
 gem 'swagger-docs'
+gem 'active_model_serializers'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
