Api - user model using devise

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -13,6 +13,7 @@ gem 'puma', '~> 3.7'
 gem 'dotenv-rails'
 gem 'swagger-docs'
 gem 'active_model_serializers'
+gem 'devise'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
