Api - install of pundit

--- a/api/Gemfile
+++ b/api/Gemfile
@@ -15,6 +15,7 @@ gem 'swagger-docs'
 gem 'active_model_serializers'
 gem 'jwt'
 gem 'devise'
+gem 'pundit'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
