--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
@@ -13,6 +14,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.4",
     "redux-saga": "^0.15.6"
   },
   "scripts": {
