--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "1.0.13",
     "redux": "^3.7.2",
+    "redux-auth-wrapper": "^2.0.1",
     "redux-form": "^7.0.4",
     "redux-saga": "^0.15.6"
   },
