--- a/api/Gemfile
+++ b/api/Gemfile
@@ -18,6 +18,7 @@ gem 'devise'
 gem 'pundit'
 gem 'kaminari'
 gem 'rack-cors'
+gem 'faker'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
